RunThese30M.java crashed with assert(early->flag() == current->flag() || early->flag() == mtNone)

XMLWordPrintable

    • b25

        Test: applications/runthese/RunThese30M.java
        VM Options: -XX:+CreateCoredumpOnCrash -XX:+UseZGC
        Build: jdk-20.0.2+3-37
        OS: windows-x64-debug
        Reproducibility: Very Low, has been seen only 2 times. See mach5 link in comments

        Crash log:
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (c:\\sb\\prod\\1681837168\\workspace\\open\\src\\hotspot\\share\\services\\memReporter.cpp:823), pid=38432, tid=40768
        # assert(early->flag() == current->flag() || early->flag() == mtNone) failed: Expect the same flag, but Shared class space != Metaspace
        #
        # JRE version: Java(TM) SE Runtime Environment (20.0.2+3) (fastdebug build 20.0.2-ea+3-37)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20.0.2-ea+3-37, mixed mode, sharing, tiered, compressed class ptrs, z gc, windows-amd64)
        # Core dump will be written. Default location: C:\\sb\\prod\\1681845714\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\\scratch\\0\\hs_err_pid38432.mdmp
        #
        # JFR recording file will be written. Location: C:\\sb\\prod\\1681845714\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\\scratch\\0\\hs_err_pid38432.jfr
        #
        Unsupported internal testing APIs have been used.

        # An error report file with more information is saved as:
        # C:\\sb\\prod\\1681845714\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\\scratch\\0\\hs_err_pid38432.log
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp

              Assignee:
              Gerard Ziemski (Inactive)
              Reporter:
              Vikrant Agarwal
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

                Created:
                Updated:
                Resolved: