8306428: RunThese30M.java crashed with assert(early->flag() == current->flag() || early->flag() == mtNone)

Reviewed-by: mbaesken
Backport-of: ca54f4e007ab0f13bec9aaf995d34c0ab3ba6452